salesforce/force-app/main/default/objects/Blending_Detail__c/Blending_Detail__c.object-meta.xml
<CustomObject>
    <description>Blending/powder process costs for a formula version</description>
    <label>Blending Detail</label>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Blending Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>