salesforce/force-app/main/default/objects/Blending_Detail__c/fields/Blending_Cost__c.field-meta.xml
<CustomField>
    <fullName>Blending_Cost__c</fullName><label>Blending Cost</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>