salesforce/force-app/main/default/objects/Blending_Detail__c/fields/Flavor_Profile__c.field-meta.xml
<CustomField>
    <fullName>Flavor_Profile__c</fullName><label>Flavor Profile Cost</label><precision>18</precision><required>false</required><scale>6</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>