salesforce/force-app/main/default/objects/Blending_Detail__c/fields/Wastage_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Wastage_Percentage__c</fullName><label>Wastage (%)</label><precision>10</precision><required>false</required><scale>4</scale><trackHistory>false</trackHistory><type>Number</type><unique>false</unique>
</CustomField>